Sold Position no longer filters by specific project, instead it just uses clients you've searched for. In the event that you left the clients field empty, it will search for all clients. Fixed the issue where no matter the date range, the historical data would always appear in the same order, making it incorrect

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -72,23 +72,23 @@
 </div>
 
 <script>
-//   $(document).ready(function(){
-//     var checkboxes = $("input[type='checkbox']");
-//     if(checkboxes.prop("checked")){
-//         document.getElementById("check_all").innerHTML = "Deselect All";
-//     }
-//     else {
-//         document.getElementById("check_all").innerHTML = "Select All";
-//     }
-//    $('#check_all').on("click", function() {
-//     if(checkboxes.prop("checked")){
-//         checkboxes.prop("checked",false);
-//         document.getElementById("check_all").innerHTML = "Select All";
-//     }
-//     else {
-//         checkboxes.prop("checked",true);
-//         document.getElementById("check_all").innerHTML = "Deselect All";
-//     }
-//   });
-// });
+  $(document).on('page:change', function () {
+    var checkboxes = $("input[type='checkbox']");
+    if(checkboxes.prop("checked")){
+        document.getElementById("check_all").innerHTML = "Deselect All";
+    }
+    else {
+        document.getElementById("check_all").innerHTML = "Select All";
+    }
+   $('#check_all').on("click", function() {
+    if(checkboxes.prop("checked")){
+        checkboxes.prop("checked",false);
+        document.getElementById("check_all").innerHTML = "Select All";
+    }
+    else {
+        checkboxes.prop("checked",true);
+        document.getElementById("check_all").innerHTML = "Deselect All";
+    }
+  });
+});
 </script>
