hidden detailed breakdown

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -161,7 +161,8 @@ var chart = c3.generate({
 <script>
 function updatelabel() {
   var elem = document.getElementById("showdata");
-  if (elem.innerHTML == "Close") {
+  if (elem.innerHTML == "
+  Close") {
     elem.innerHTML = "View Detailed Breakdown";
     console.log("closing");
   }  else {
