Last back up with PROJECTS search feature and other filters on the page

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -92,3 +92,10 @@
   });
 });
 </script>
+
+<% content_for :knownerrors,
+'
+<ul>
+  <li>JavaScript doesn\'t work on load. Have to refresh to page to update assigned clients.</li>
+</ul>
+'.html_safe %>
