--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,20 @@
 <div class="container">      
   <%= yield %>
 </div>
-
+<!-- For Known Errors -->
+	<div class="col-lg-12">
+		<p style="margin-top: 30px;">
+			<a data-toggle="collapse" href="#collapseErrors" aria-expanded="false" aria-controls="collapseErrors">
+				<font size="1">Show Known Errors on this page</font>
+			</a>
+		</p>
+		<div class="collapse" id="collapseErrors">
+			<div class="card card-block">
+					<div class="alert alert-danger"><%= content_for?(:knownerrors) ? yield(:knownerrors) : 'None at this time' %></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
+
+  
