--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Region:</strong>
-  <%= @client.region %>
+  <strong>Location:</strong>
+  <%= @client.location %>
 </p>
 
 <p>
