--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :client_name %>
     <%= f.input :country, priority: ['Australia', 'United States', 'United Kingdom'] %>
-    <%= f.input :region %>
+    <%= f.input :location %>
     <%= f.input :company, collection: ['ARGONAUT','G7','George P. Johnson','Junior', 'Juxt','Motive','Partners + Napier','Pitch','Raumtechnik','School','Shoptology','Spinifex Group'], selected: ['George P. Johnson'] %>
   </div>
 
