updated with no turbolinks on profile page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
   <%= csrf_meta_tags %>
 
 </head>
-<body>
+<body 
+  <% if content_for?(:body_attributes) %>
+    <%= yield(:body_attributes) %> 
+  <% end %>>
 <!-- Notification -->
 <% unless flash.empty? %>
 	  <script type="text/javascript">
