--- a/app/views/pages/manage_users.html.erb
+++ b/app/views/pages/manage_users.html.erb
@@ -16,7 +16,7 @@
         <li class="list-group-item">
 <!-- LEFT COL -->
             <span>
-                <strong><%= link_to p.full_name, profile_path(p) %></strong>
+                <strong><%= link_to p.full_name, profile_path(p), 'data-no-turbolink' => true %></strong>
                     <% if p.user.has_role? :admin %>
                        – admin
                     <% elsif p.user.has_role? :super_admin %>
@@ -30,7 +30,7 @@
             </span>
 <!-- RIGHT COL -->   
             <span class="pull-right">
-                <%= link_to '<i class="fa fa-cogs" aria-hidden="true"></i> Manage Clients'.html_safe, profile_path(p) %> 
+                <%= link_to '<i class="fa fa-cogs" aria-hidden="true"></i> Manage Clients'.html_safe, profile_path(p), 'data-no-turbolink' => true %> 
                 <% if (current_user == p.user) || (p.user.has_role? :super_admin) %>
                 <% elsif p.user.has_role? :admin %>
                     |  <%= link_to '<i class="fa fa-user-times" aria-hidden="true"></i> delete user'.html_safe, p.user, method: :delete, data: { confirm: "Warning! You are about to delete this user. This action can not be undone. Do you wish to proceed?" } %>
