--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -32,10 +32,6 @@
 
 <div class="col-lg-4">
 <ul>
-<% @found_search.budget_margin_by_month.each do |lak| %>
-  <li><%= lak[0].strftime('%b %Y') %> – <%= lak[1] %></li>
-  <hr>
-<% end %>
 </ul>
 </div>
 
@@ -112,7 +108,6 @@ var chart = c3.generate({
 });
  </script>
 
-
 <p>
   <button class="btn btn-secondary collapsed" id="showdata" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" onclick="updatelabel()">
     View Detailed Breakdown
@@ -121,7 +116,7 @@ var chart = c3.generate({
 <div class="collapse" id="collapseExample">
   <div class="card card-block">
     <h1>Projects</h1>
-    <% if @found_search.projects.empty? %>
+    <% if @found_search.clients.empty? %>
         <p>No Records Found</p>
     <% else %>
         <table class="table">
@@ -138,9 +133,9 @@ var chart = c3.generate({
       </thead>
 
       <tbody> 
-        <% Project.where(client: @found_search.clients.pluck(:client_name)).each do |project| %>
+        <% Project.where(client: @found_search.clients.pluck(:id)).each do |project| %>
           <tr>
-            <td><%= project.client %></td>
+            <td><%= project.client.client_name %></td>
             <td><%= project.project_status %></td>
             <td><%= project.project_name %></td>
             <td><%= project.created_at.strftime('%B') %></td>
@@ -175,5 +170,6 @@ function updatelabel() {
 <ul>
   <li>On the iPhone there seems to be an issue where the Client\'s drop down won\'t allow you to select AWS by itself + other weird behaviour on mobile</li>
   <li>Can\'t seem to populate the error dialogue when date range is invalid.</li>
+  <li>Need to add some error handling for if the user is not assigned to any clients. Maybe a check should happen on the index view and redirect them to a page telling them they aren\'t yet assigned to any clients.</li>
 </ul>
 '.html_safe %>
