--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -2,8 +2,8 @@
 <div class="alert alert-info col-lg-12">
 <div class="col-lg-12">
     <span class="field" style="margin-right: 50px" >
-        <%= s.label :project %>
-        <%= s.collection_select :project, @location, :id, :location, {}, {multiple: true, include_blank: false} %>
+        <%= s.label :location %>
+        <%= s.collection_select :location, @location, :id, :location, {}, {multiple: true, include_blank: false} %>
     </span>
     <span class="field" style="margin-right: 50px" >
         <%= s.label :client, collection: @client %>
